# serio

./: .editorconfig  .gitignore  LICENSE  README.md  coverage.xml  pyproject.toml
.github/workflows/: python-package.yml
src/serio/: __init__.py  compat.py  exceptions.py  streams.py  transport.py
tests/: __init__.py  conftest.py  test_compat.py  test_streams.py  test_transport.py
tests/fixtures/: __init__.py  virtual_ports.py
